--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr 2fr 1fr;
 }
 
-.postCreator {
+.post-creator {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,7 @@
   border-bottom: 1px solid white;
 }
 
-.postCreator div {
+.post-creator div {
   height: 100%;
 }
 
@@ -32,16 +32,16 @@ textarea {
   font-size: 1.2rem;
 }
 
-input[type=submit] {
+input[type="submit"] {
   width: 100px;
   height: 50px;
   border: 0;
   border-radius: 5%;
   color: white;
   background-color: #305768;
-} 
+}
 
-.postCreator div img {
+.post-creator div img {
   width: 10%;
 }
 
