--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr 1.5fr 0.3fr;
   grid-template-rows: 70px;
   align-items: center;
-  padding: 0px 40px;
+  padding: 0 40px;
   border-bottom: 1px solid white;
 }
 
@@ -15,7 +15,7 @@ ul {
   justify-content: space-between;
 }
 
-input[type=text] {
+input[type="text"] {
   background-color: #29262c;
   border: 0;
   width: 400px;
