--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -55,17 +55,16 @@ input[type="submit"] {
   height: 100%;
 }
 
-.posts{
+.posts {
   width: 100%;
   height: fit-content;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .post-container {
   border: 1px solid white;
-  width: 100%;
   margin: 5% 20%;
   padding: 5%;
 }
