--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,3 +1,54 @@
 .container {
-    height: 100vh;
+    height: 50vh;
+    background-color: #111315;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    .form-container{
+        width: 40%;
+        height: 80%;
+        border: 1px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .error{
+        font-size: 1.2rem;
+        color: red;
+    }
+    form {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+        justify-content: center;
+
+        input[type="submit"] {
+            width: 100px;
+            height: 50px;
+            border: 0;
+            border-radius: 5%;
+            color: white;
+            background-color: #305768;
+            cursor: pointer;
+        }
+    }
+
+    label {
+        margin-bottom: 0.4rem;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        background-color: #29262c;
+        border: 0;
+        width: 400px;
+        color: white;
+        height: 40px;
+        font-size: 1.2rem;
+        margin: 0 0 2rem 0;
+    }
 }
