--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,33 +1,57 @@
 .navbar {
-  list-style-type: none;
-  background-color: #111315;
-  display: grid;
-  grid-template-columns: 1fr 1.5fr 0.3fr;
-  grid-template-rows: 70px;
-  align-items: center;
-  padding: 0 40px;
-  border-bottom: 1px solid white;
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  input[type="text"] {
-    background-color: #29262c;
-    border: 0;
-    width: 400px;
-    color: white;
-    height: 40px;
-    font-size: 1.2rem;
-    border-radius: 5%;
-  }
-  
-  img {
-    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(277deg) brightness(121%) contrast(97%);
-  }
-  
-  ul li img {
-    cursor: pointer;
-  }
+	list-style-type: none;
+	background-color: #111315;
+	display: grid;
+	grid-template-columns: 1fr 1.5fr 0.3fr;
+	grid-template-rows: 70px;
+	align-items: center;
+	padding: 0 40px;
+	border-bottom: 1px solid white;
+	ul {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	input[type="text"] {
+		background-color: #29262c;
+		border: 0;
+		width: 400px;
+		color: white;
+		height: 40px;
+		font-size: 1.2rem;
+		border-radius: 5%;
+	}
+
+	img {
+		filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(277deg)
+			brightness(121%) contrast(97%);
+	}
+
+	ul li img {
+		cursor: pointer;
+	}
+
+	button {
+		width: 100px;
+		height: 50px;
+		border: 0;
+		border-radius: 5%;
+		color: white;
+		background-color: #305768;
+		cursor: pointer;
+		font-size: 1.2rem;
+	}
+	button:hover {
+		background-color: #111315;
+		color: white;
+		border: 1px solid #305768;
+		transition: all 0.2s ease-in;
+	}
+	a {
+		display: flex;
+		align-items: center;
+		margin: 0.7rem;
+		text-decoration: none;
+	}
 }
