--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -5,11 +5,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 
+	h2 {
+		margin-bottom: 1rem;
+	}
 	.form-container {
 		width: 40%;
 		height: 80%;
-		border: 1px solid white;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -17,7 +20,6 @@
 	}
 	.error {
 		font-size: 1.2rem;
-		color: red;
 	}
 	form {
 		height: 100%;
