Adding User Authentication on the Client Side

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,7 +27,9 @@
 		filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(277deg)
 			brightness(121%) contrast(97%);
 	}
-
+	.user {
+		filter: none;
+	}
 	ul li img {
 		cursor: pointer;
 	}
