--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -76,9 +76,8 @@
 		height: fit-content;
 		overflow-wrap: break-word;
 	}
-
-	img {
-		filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(277deg)
-			brightness(121%) contrast(97%);
+	.post-container img {
+		height: 55;
+		width: 55;
 	}
 }
