--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,8 @@
 	align-items: center;
 	padding: 0 40px;
 	border-bottom: 1px solid white;
+	width: 100%;
+	position: fixed;
 	ul {
 		display: flex;
 		flex-direction: row;
