--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,8 @@
 	padding: 0 40px;
 	border-bottom: 1px solid white;
 	width: 100%;
-	position: fixed;
+	position: sticky;
+	top: 0;
 	ul {
 		display: flex;
 		flex-direction: row;
