--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -1,6 +1,5 @@
 .posts {
 	width: 100%;
-	height: fit-content;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -16,7 +15,6 @@
 		width: 650px;
 		border: 1px solid white;
 		margin: 1rem 4rem;
-		height: fit-content;
 		overflow-wrap: break-word;
 		display: flex;
 		flex-direction: column;
@@ -46,5 +44,8 @@
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+	}
+	.post-container:last-child {
+		margin-bottom: 4rem;
 	}
 }
