--- a/src/components/RecipentList/RecipentList.css
+++ b/src/components/RecipentList/RecipentList.css
@@ -3,7 +3,7 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: space-around;
 		padding: 1rem 3rem;
 		border-bottom: 1px solid white;
 	}
