--- a/src/pages/Messages/Messages.css
+++ b/src/pages/Messages/Messages.css
@@ -1,9 +1,25 @@
 .messages {
 	display: grid;
 	grid-template-columns: 1fr 7fr;
-	grid-template-rows: 100vh;
+	grid-template-rows: 101vh;
 	background-color: #111315;
 	.message-list {
 		border-right: 1px solid white;
+	}
+	.message-display textarea {
+		background-color: #29262c;
+		border: 0;
+		color: white;
+		font-size: 1.2rem;
+		resize: none;
+	}
+	.send-icon {
+		position: absolute;
+		right: 0;
+		bottom: 0px;
+		cursor: pointer;
+	}
+	.send-message {
+		background-color: #29262c;
 	}
 }
