--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	flex-direction: column;
 
-	.post-container div {
+	.post-container .top {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -19,7 +19,6 @@
 		display: flex;
 		flex-direction: column;
 		align-content: space-between;
-		padding: 0.3rem;
 	}
 	a {
 		text-decoration: none;
@@ -35,6 +34,7 @@
 		margin-bottom: 1.2rem;
 		width: 100%;
 		font-size: 1.4rem;
+		padding: 0.3rem;
 	}
 	.top img {
 		margin-right: 0.3rem;
@@ -45,7 +45,29 @@
 		justify-content: center;
 		align-items: center;
 	}
+	.post-text {
+		padding: 0.3rem;
+		padding-bottom: 1rem;
+	}
 	.post-container:last-child {
 		margin-bottom: 4rem;
+	}
+	.post-interaction {
+		border-top: 1px solid white;
+		padding: 0 2rem;
+		padding-top: 1rem;
+		display: flex;
+		flex-direction: row;
+		gap: 1rem;
+		img,
+		button img {
+			width: 44px;
+			height: 44px;
+			cursor: pointer;
+		}
+		button {
+			background-color: transparent;
+			border: 0;
+		}
 	}
 }
