--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -10,7 +10,6 @@
 		flex-direction: row;
 		justify-content: space-between;
 	}
-
 	.post-container {
 		width: 650px;
 		border: 1px solid white;
@@ -59,6 +58,7 @@
 		display: flex;
 		flex-direction: row;
 		gap: 1rem;
+		align-items: center;
 		img,
 		button img {
 			width: 44px;
@@ -68,6 +68,17 @@
 		button {
 			background-color: transparent;
 			border: 0;
+		}
+		.likes {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 0.2rem;
+			font-size: 2rem;
+			font-weight: bold;
+			p {
+				padding-bottom: 0.4rem;
+			}
 		}
 	}
 }
