--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -66,4 +66,41 @@
 			justify-content: space-between;
 		}
 	}
+	.main {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		.error {
+			position: sticky;
+			background-color: #111315;
+			width: 500px;
+			height: 150px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-around;
+			top: 10px;
+			color: white;
+			.text-container {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-around;
+				width: 100%;
+			}
+			p:nth-child(2) {
+				color: gray;
+				font-size: 1.7rem;
+				cursor: pointer;
+			}
+			button {
+				width: 100px;
+				height: 50px;
+				border: 0;
+				border-radius: 5%;
+				color: white;
+				background-color: #305768;
+				cursor: pointer;
+			}
+		}
+	}
 }
