--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -50,3 +50,47 @@
 		font-size: 1.2rem;
 	}
 }
+.edit {
+	background-color: #111315;
+	width: 500px;
+	position: absolute;
+	z-index: 1;
+	gap: 1rem;
+	height: 500px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	top: 300px;
+	left: 700px;
+	color: white;
+	input[type="text"] {
+		background-color: #29262c;
+		border: 0;
+		width: 400px;
+		color: white;
+		height: 40px;
+		font-size: 1.2rem;
+	}
+	button {
+		width: 100px;
+		height: 50px;
+		border: 0;
+		border-radius: 5%;
+		color: white;
+		background-color: #305768;
+		cursor: pointer;
+		font-size: 1.2rem;
+	}
+	.your-data {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		width: 100%;
+	}
+	p:nth-child(2) {
+		color: gray;
+		font-size: 1.7rem;
+		cursor: pointer;
+	}
+}
