--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -18,6 +18,7 @@
 		display: flex;
 		flex-direction: column;
 		align-content: space-between;
+		cursor: pointer;
 	}
 	a {
 		text-decoration: none;
